--- a/SubliPlace.AccesoADatos/nbproject/private/private.properties
+++ b/SubliPlace.AccesoADatos/nbproject/private/private.properties
@@ -2,8 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mssql-jdbc-11.2.3.jre18.jar=C:\\Users\\Isabel\\Documents\\Programas\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Isabel\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\MINEDUCYT\\AppData\\Roaming\\NetBeans\\17\\build.properties
