--- a/SubliPlace.AccesoADatos/nbproject/project.properties
+++ b/SubliPlace.AccesoADatos/nbproject/project.properties
@@ -35,12 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SubliPlace.AccesoADatos
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-11.2.3.jre18.jar=..\\..\\..\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-11.2.3.jre18.jar}:\
-    ${reference.SubliPlace_EntidadesDeNegocio.jar}
+    ${reference.SubliPlace_EntidadesDeNegocio.jar}:\
+    ${libs.MySQL_JDBC_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,7 +80,7 @@ main.class=subliplace.accesoadatos.SubliPlaceAccesoADatos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_20
 project.SubliPlace_EntidadesDeNegocio=../SubliPlace.EntidadesDeNegocio
 reference.SubliPlace_EntidadesDeNegocio.jar=${project.SubliPlace_EntidadesDeNegocio}/dist/SubliPlace.EntidadesDeNegocio.jar
 run.classpath=\
