--- a/SubliPlace.AppWeb/nbproject/private/private.properties
+++ b/SubliPlace.AppWeb/nbproject/private/private.properties
@@ -1,6 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Isabel\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\Isabel\\Documents\\Programas\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.3.jre18.jar
-j2ee.server.home=C:/apache-tomcat-10.1.11
-j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.11
-selected.browser=default
-user.properties.file=C:\\Users\\Isabel\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=C:\\Users\\MINEDUCYT\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcats10
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcats10
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
+user.properties.file=C:\\Users\\MINEDUCYT\\AppData\\Roaming\\NetBeans\\17\\build.properties
