--- a/SubliPlace.AppWeb/nbproject/project.properties
+++ b/SubliPlace.AppWeb/nbproject/project.properties
@@ -25,8 +25,8 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.33.jar=..\\..\\..\\Downloads\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +38,7 @@ jar.compress=false
 javac.classpath=\
     ${reference.SubliPlace_EntidadesDeNegocio.jar}:\
     ${reference.SubliPlace_AccesoADatos.jar}:\
-    ${file.reference.mysql-connector-j-8.0.33.jar}
+    ${libs.MySQL_JDBC_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -65,9 +65,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
-platform.active=default_platform
+platform.active=JDK_20
 project.SubliPlace_AccesoADatos=../SubliPlace.AccesoADatos
 project.SubliPlace_EntidadesDeNegocio=../SubliPlace.EntidadesDeNegocio
 reference.SubliPlace_AccesoADatos.jar=${project.SubliPlace_AccesoADatos}/dist/SubliPlace.AccesoADatos.jar
