--- a/SubliPlace.AppWeb/nbproject/project.properties
+++ b/SubliPlace.AppWeb/nbproject/project.properties
@@ -37,8 +37,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${reference.SubliPlace_EntidadesDeNegocio.jar}:\
-    ${reference.SubliPlace_AccesoADatos.jar}:\
-    ${libs.MySQL_JDBC_Driver.classpath}
+    ${reference.SubliPlace_AccesoADatos.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -66,7 +65,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_20
+platform.active=default_platform
 project.SubliPlace_AccesoADatos=../SubliPlace.AccesoADatos
 project.SubliPlace_EntidadesDeNegocio=../SubliPlace.EntidadesDeNegocio
 reference.SubliPlace_AccesoADatos.jar=${project.SubliPlace_AccesoADatos}/dist/SubliPlace.AccesoADatos.jar
@@ -81,6 +80,7 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
+src.Java%20Package.dir=Java Package
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
