--- a/SubliPlace.AccesoADatos/nbproject/project.properties
+++ b/SubliPlace.AccesoADatos/nbproject/project.properties
@@ -39,7 +39,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.SubliPlace_EntidadesDeNegocio.jar}:\
-    ${libs.MySQL_JDBC_Driver.classpath}
+    ${libs.MySql.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +80,7 @@ main.class=subliplace.accesoadatos.SubliPlaceAccesoADatos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_20
+platform.active=default_platform
 project.SubliPlace_EntidadesDeNegocio=../SubliPlace.EntidadesDeNegocio
 reference.SubliPlace_EntidadesDeNegocio.jar=${project.SubliPlace_EntidadesDeNegocio}/dist/SubliPlace.EntidadesDeNegocio.jar
 run.classpath=\
