--- a/SubliPlace.AppWeb/nbproject/private/private.properties
+++ b/SubliPlace.AppWeb/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\MINEDUCYT\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcats10
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcats10
+j2ee.server.home=C:/apache-tomcat-10.1.11-windows-x64/apache-tomcat-10.1.11
+j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.11-windows-x64\\apache-tomcat-10.1.11
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
